# LAMA-slicer

./: CMakeLists.txt  README.md  main.cpp  pom.xml
libs/: CMakeLists.txt
libs/lamalib/: CMakeLists.txt  lamalib.h
libs/lamalib/include/mesh/geometry/: Multipoint.h
libs/lamalib/src/mesh/: TriangleMesh.cpp  TriangleMesh.h
libs/lamalib/src/mesh/geometry/: Line.cpp  Line.h  Multipoint.cpp  Multipoint.h  Point.h  Polygon.cpp  Polygon.h
libs/lamalib/src/parser/: StlPaser.h
libs/lamalib/src/slicer/: MeshSlicer.h
libs/lamalib/test/: test.cpp
src/: main.cpp
src/main/java/: module-info.java
src/main/java/lamaunina/lamaslicer/: LAMAslicer.java  LAMAslicerController.java
